Trying to fix spacing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .cpr-image {
-    max-width: 100%;
+    max-width: 90%;
     height: auto;
 }
 
@@ -78,3 +78,7 @@ h4{
     margin-top: 15%;
 }
 
+#titleSpacer{
+    height: 56px;
+    display: none;
+}
